<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lip_login_background">

    <include
        android:id="@+id/header"
        style="@style/lip_title_bar_green"
        layout="@layout/lip_titlebar_layout"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/signInDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/signinLayout">

        <ImageView
            android:id="@+id/lip_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:src="@drawable/lip_logi_logo" />

        <com.logitech.lip.ui.common.CustomTextView
            android:id="@+id/loginDesc"
            style="@style/descriptionSmallTextView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/lip_sign_up_with"
            android:visibility="visible" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/signinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:id="@+id/dividerFacebook"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:alpha="0.5"
            android:background="@android:color/white">
        </View>

        <com.logitech.lip.ui.common.CustomImageButton
            android:id="@+id/btn_facebook"
            style="@style/lip_login_button.facebook"
            android:text="@string/lip_sign_up_facebook" />

        <View
            android:id="@+id/dividerGoogle"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:alpha="0.5"
            android:background="@android:color/white">
        </View>

        <com.logitech.lip.ui.common.CustomImageButton
            android:id="@+id/btn_google"
            style="@style/lip_login_button.google"
            android:text="@string/lip_sign_up_google" />

        <View
            android:id="@+id/dividerEmail"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:alpha="0.5"
            android:background="@android:color/white">
        </View>

        <com.logitech.lip.ui.common.CustomButton
            android:id="@+id/btn_email"
            style="@style/lip_login_button.email"
            android:text="@string/lip_sign_up_email" />

    </LinearLayout>


</RelativeLayout>
