<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lip_window_background">

    <include
        android:id="@+id/header"
        layout="@layout/lip_titlebar_layout"
        android:visibility="visible" />

    <com.logitech.lip.ui.common.CustomTextView
        android:id="@+id/tou_opt_container"
        style="@style/lip_login_textViewCommon"
        android:layout_below="@+id/header"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/lip_sign_up_tou_opt_in_desc" />

    <LinearLayout
        android:id="@+id/acceptContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:layout_below="@+id/tou_opt_container">

        <CheckBox
            android:id="@+id/sign_up_accept_button"
            style="@style/lip_login_checkBoxCommon"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

        <com.logitech.lip.ui.common.CustomTextView
            android:id="@+id/sign_up_accept_checkbox_text"
            style="@style/lip_login_checkBoxTextView"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:layout_gravity="center"
            android:text="@string/lip_sign_up_terms_use_privacy_policy" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/acceptContainer">

        <CheckBox
            android:id="@+id/sign_up_keep_button"
            style="@style/lip_login_checkBoxCommon"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

        <com.logitech.lip.ui.common.CustomTextView
            android:id="@+id/sign_up_keep_button_text"
            style="@style/lip_login_checkBoxTextView"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:layout_gravity="center"
            android:text="@string/lip_sign_up_receive_updates" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.logitech.lip.ui.common.CustomButton
            android:id="@+id/terms_accept"
            style="@style/lip_primary_white_button"
            android:layout_margin="@dimen/lip_terms_buttons_margin"
            android:text="@string/lip_sign_up_continue" />
    </LinearLayout>

</RelativeLayout>